--- a/01_main.html
+++ b/01_main.html
@@ -33,6 +33,8 @@
                 <header>
                     <div class="container">
 
+                        <a href="#" class="mobile-menu-link"></a>
+
                         <div class="logo"><img src="images/logo.png" alt="" width="252" height="60" /></div>
 
                         <div class="header-text">
@@ -44,9 +46,10 @@
                             <a href="#" class="header-cart-value"><span>2</span></a>
                         </div>
 
-                        <a href="#" class="header-compare"></a>
+                        <a href="#" class="header-compare"><span>2</span></a>
 
                         <div class="header-search">
+                            <a href="#" class="header-search-link"></a>
                             <form action="#" method="post">
                                 <div class="form-input"><input type="text" name="search" value="" class="required" /></div>
                                 <div class="form-submit"><input type="submit" value="" /></div>
@@ -529,7 +532,7 @@
                         ymaps.ready(init);
 
                         var myMap;
-                        var coords = [55.590109, 37.632134]
+                        var coords = [55.590109, 37.632134];
 
                         function init() {
                             myMap = new ymaps.Map('map', {
