--- a/02_catalogue.html
+++ b/02_catalogue.html
@@ -33,6 +33,8 @@
                 <header>
                     <div class="container">
 
+                        <a href="#" class="mobile-menu-link"></a>
+
                         <div class="logo"><a href="#"><img src="images/logo.png" alt="" width="252" height="60" /></a></div>
 
                         <div class="header-text">
@@ -47,6 +49,7 @@
                         <a href="#" class="header-compare"></a>
 
                         <div class="header-search">
+                            <a href="#" class="header-search-link"></a>
                             <form action="#" method="post">
                                 <div class="form-input"><input type="text" name="search" value="" class="required" /></div>
                                 <div class="form-submit"><input type="submit" value="" /></div>
