--- a/05_searchResults.html
+++ b/05_searchResults.html
@@ -33,6 +33,8 @@
                 <header>
                     <div class="container">
 
+                        <a href="#" class="mobile-menu-link"></a>
+
                         <div class="logo"><a href="#"><img src="images/logo.png" alt="" width="252" height="60" /></a></div>
 
                         <div class="header-text">
@@ -47,6 +49,7 @@
                         <a href="#" class="header-compare"></a>
 
                         <div class="header-search">
+                            <a href="#" class="header-search-link"></a>
                             <form action="#" method="post">
                                 <div class="form-input"><input type="text" name="search" value="" class="required" /></div>
                                 <div class="form-submit"><input type="submit" value="" /></div>
@@ -124,7 +127,7 @@
                                 <div class="search-result-section"><a href="#">Сервис</a></div>
                                 <div class="search-result-text">KBSOUND Эстетическая привлекательность подобного решения и простота технической реализации - слоганом рекламной компании стала фраза - «установить так просто, как установить выключатель» привела к колоссальному интересу со стороны потребителей. Теперь для установки аудио системы не требовались специальные знания и расчеты, монтаж и настройку системы можно выполнить не имея специальных навыков...</div>
                                 <div class="search-result-date">Изменен: 29.11.2016</div>
-                                <div class="search-result-path"<a href="#">RBS Group</a> / <a href="#">Сервис</a></div>
+                                <div class="search-result-path"><a href="#">RBS Group</a> / <a href="#">Сервис</a></div>
                             </div>
                             <!-- search result END -->
 
@@ -151,7 +154,7 @@
                                 <div class="search-result-section"><a href="#">Сервис</a></div>
                                 <div class="search-result-text">KBSOUND Эстетическая привлекательность подобного решения и простота технической реализации - слоганом рекламной компании стала фраза - «установить так просто, как установить выключатель» привела к колоссальному интересу со стороны потребителей. Теперь для установки аудио системы не требовались специальные знания и расчеты, монтаж и настройку системы можно выполнить не имея специальных навыков...</div>
                                 <div class="search-result-date">Изменен: 29.11.2016</div>
-                                <div class="search-result-path"<a href="#">RBS Group</a> / <a href="#">Сервис</a></div>
+                                <div class="search-result-path"><a href="#">RBS Group</a> / <a href="#">Сервис</a></div>
                             </div>
                             <!-- search result END -->
 
