--- a/00_typography.html
+++ b/00_typography.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="js/jquery-ui-1.11.4.spinner/jquery-ui.css" />
         <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css">
         <link rel="stylesheet" href="js/slick/slick.css" />
+        <link rel="stylesheet" href="js/jscrollpane/jquery.jscrollpane.css" />
 
         <script src="js/jquery-2.2.4.min.js"></script>
         <script src="js/chosen/chosen.jquery.min.js"></script>
@@ -19,6 +20,8 @@
         <script src="js/jquery-ui-1.11.4.spinner/jquery-ui.min.js"></script>
         <script src="js/fancybox/jquery.fancybox.min.js"></script>
         <script src="js/slick/slick.min.js"></script>
+        <script src="js/jscrollpane/jquery.mousewheel.js"></script>
+        <script src="js/jscrollpane/jquery.jscrollpane.min.js"></script>
         <script src="js/tools.js"></script>
 
         <meta name="viewport" content="width=device-width" />
@@ -33,8 +36,6 @@
                 <header>
                     <div class="container">
 
-                        <a href="#" class="mobile-menu-link"></a>
-
                         <div class="logo"><a href="#"><img src="images/logo.png" alt="" width="252" height="60" /></a></div>
 
                         <div class="header-text">
@@ -44,6 +45,39 @@
 
                         <div class="header-cart">
                             <a href="#" class="header-cart-value"><span>2</span></a>
+                            <div class="header-cart-window">
+                                <!-- basket row -->
+                                <div class="basket-row">
+                                    <div class="basket-photo"><a href="#"><img src="files/basket-1.jpg" alt="" /></a></div>
+                                    <div class="basket-text">
+                                        <div class="basket-title"><a href="#">Беспроводной сканер штрих-кода Datalogic PSC QS 2130</a></div>
+                                        <div class="basket-art">Артикул: 1532645</div>
+                                    </div>
+                                    <div class="basket-row-price">
+                                        15 500 &#8381;
+                                        <div class="basket-row-count-text">1 шт.</div>
+                                    </div>
+                                </div>
+                                <!-- basket row END -->
+
+                                <!-- basket row -->
+                                <div class="basket-row">
+                                    <div class="basket-photo"><a href="#"><img src="files/basket-1.jpg" alt="" /></a></div>
+                                    <div class="basket-text">
+                                        <div class="basket-title"><a href="#">Беспроводной сканер штрих-кода Datalogic PSC QS 2130</a></div>
+                                        <div class="basket-art">Артикул: 1532645</div>
+                                    </div>
+                                    <div class="basket-row-price">
+                                        15 500 &#8381;
+                                        <div class="basket-row-count-text">1 шт.</div>
+                                    </div>
+                                </div>
+                                <!-- basket row END -->
+                                <div class="header-cart-links">
+                                    <a href="#" class="header-cart-window-hide">Свернуть</a>
+                                    <a href="#" class="header-cart-window-order">Оформить заказ</a>
+                                </div>
+                            </div>
                         </div>
 
                         <a href="#" class="header-compare"></a>
@@ -64,6 +98,14 @@
                     <div class="container">
                         <div class="menu-add">
                             <a href="#" class="menu-add-link"></a>
+                            <ul>
+                                <li><a href="#">Каталог</a></li>
+                                <li><a href="#">О компании</a></li>
+                                <li><a href="#">Новости</a></li>
+                                <li><a href="#">Доставка и оплата</a></li>
+                                <li><a href="#">Статьи</a></li>
+                                <li><a href="#">Контакты</a></li>
+                            </ul>
                         </div>
 
                         <div class="menu">
@@ -132,7 +174,14 @@
                     <div class="content">
                         <div class="content-wrap">
 
-                            <h1>h1 - Вакансии</h1>
+                            <!-- catalogue header -->
+                            <div class="catalogue-header">
+                                <h1>h1 - Вакансии</h1>
+
+                                <a href="#" class="side-menu-mobile-link">Свернуть</a>
+                            </div>
+                            <!-- catalogue header END -->
+
                             <p>Жизненный цикл продукции транслирует потребительский метод изучения рынка. По сути, управление брендом специфицирует конвергентный целевой сегмент рынка. По мнению ведущих маркетологов, медиапланирование оправдывает из ряда вон выходящий медиабизнес. Сервисная стратегия, суммируя приведенные примеры, создает конструктивный анализ зарубежного опыта.</p>
                             <p>Отсюда естественно следует, что традиционный канал однородно детерминирует типичный ребрендинг. Инструмент маркетинга, отбрасывая подробности, отталкивает ролевой ребрендинг. Особенность рекламы требовальна к креативу. Стратегическое планирование вполне выполнимо. Бизнес-стратегия, конечно, отталкивает охват аудитории. Косвенная реклама, как принято считать, неоднозначна.</p>
                             <h2>H2 - Наша Миссия</h2>
