--- a/04_basket.html
+++ b/04_basket.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="js/jquery-ui-1.11.4.spinner/jquery-ui.css" />
         <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css">
         <link rel="stylesheet" href="js/slick/slick.css" />
+        <link rel="stylesheet" href="js/jscrollpane/jquery.jscrollpane.css" />
 
         <script src="js/jquery-2.2.4.min.js"></script>
         <script src="js/chosen/chosen.jquery.min.js"></script>
@@ -19,6 +20,8 @@
         <script src="js/jquery-ui-1.11.4.spinner/jquery-ui.min.js"></script>
         <script src="js/fancybox/jquery.fancybox.min.js"></script>
         <script src="js/slick/slick.min.js"></script>
+        <script src="js/jscrollpane/jquery.mousewheel.js"></script>
+        <script src="js/jscrollpane/jquery.jscrollpane.min.js"></script>
         <script src="js/tools.js"></script>
 
         <meta name="viewport" content="width=device-width" />
@@ -33,8 +36,6 @@
                 <header>
                     <div class="container">
 
-                        <a href="#" class="mobile-menu-link"></a>
-
                         <div class="logo"><a href="#"><img src="images/logo.png" alt="" width="252" height="60" /></a></div>
 
                         <div class="header-text">
@@ -44,6 +45,39 @@
 
                         <div class="header-cart">
                             <a href="#" class="header-cart-value"><span>2</span></a>
+                            <div class="header-cart-window">
+                                <!-- basket row -->
+                                <div class="basket-row">
+                                    <div class="basket-photo"><a href="#"><img src="files/basket-1.jpg" alt="" /></a></div>
+                                    <div class="basket-text">
+                                        <div class="basket-title"><a href="#">Беспроводной сканер штрих-кода Datalogic PSC QS 2130</a></div>
+                                        <div class="basket-art">Артикул: 1532645</div>
+                                    </div>
+                                    <div class="basket-row-price">
+                                        15 500 &#8381;
+                                        <div class="basket-row-count-text">1 шт.</div>
+                                    </div>
+                                </div>
+                                <!-- basket row END -->
+
+                                <!-- basket row -->
+                                <div class="basket-row">
+                                    <div class="basket-photo"><a href="#"><img src="files/basket-1.jpg" alt="" /></a></div>
+                                    <div class="basket-text">
+                                        <div class="basket-title"><a href="#">Беспроводной сканер штрих-кода Datalogic PSC QS 2130</a></div>
+                                        <div class="basket-art">Артикул: 1532645</div>
+                                    </div>
+                                    <div class="basket-row-price">
+                                        15 500 &#8381;
+                                        <div class="basket-row-count-text">1 шт.</div>
+                                    </div>
+                                </div>
+                                <!-- basket row END -->
+                                <div class="header-cart-links">
+                                    <a href="#" class="header-cart-window-hide">Свернуть</a>
+                                    <a href="#" class="header-cart-window-order">Оформить заказ</a>
+                                </div>
+                            </div>
                         </div>
 
                         <a href="#" class="header-compare"></a>
@@ -64,6 +98,14 @@
                     <div class="container">
                         <div class="menu-add">
                             <a href="#" class="menu-add-link"></a>
+                            <ul>
+                                <li><a href="#">Каталог</a></li>
+                                <li><a href="#">О компании</a></li>
+                                <li><a href="#">Новости</a></li>
+                                <li><a href="#">Доставка и оплата</a></li>
+                                <li><a href="#">Статьи</a></li>
+                                <li><a href="#">Контакты</a></li>
+                            </ul>
                         </div>
 
                         <div class="menu">
@@ -96,6 +138,18 @@
                                 <div class="checkout-cart">
                                     <h1>Подробности заказа</h1>
 
+                                    <div class="checkout-steps">
+                                        <a href="#" class="checkout-step checkout-step-1">
+                                            <div class="checkout-step-number">1</div>
+                                            <div class="checkout-step-title">Корзина</div>
+                                        </a>
+                                        <div class="checkout-steps-sep"></div>
+                                        <a href="#" class="checkout-step checkout-step-2">
+                                            <div class="checkout-step-number">2</div>
+                                            <div class="checkout-step-title">Заказ</div>
+                                        </a>
+                                    </div>
+
                                     <form action="#" method="post">
 
                                         <!-- basket row -->
@@ -123,7 +177,7 @@
                                             <div class="basket-row-count">
                                                 <div class="form-input"><input type="number" name="count[]" value="1" step="1" min="1" /></div>
                                             </div>
-                                            <div class="basket-row-price"><span>27 100</span> &#8381;</div>
+                                            <div class="basket-row-price"><span>27 100</span> &#8381; <em>31 000 ₽</em></div>
                                             <div class="basket-delete"><a href="#"></a></div>
                                         </div>
                                         <!-- basket row END -->
@@ -154,6 +208,8 @@
                                                 <div class="basket-summ-title">Итого</div>
                                                 <div class="basket-summ-value"><span id="basket-summ">38 204</span> &#8381;</div>
                                             </div>
+
+                                            <div class="basket-order-link-mobile"><a href="#" class="btn-submit">Оформить заказ</a></div>
                                         </div>
                                         <!-- basket results END -->
 
@@ -164,7 +220,19 @@
 
                                 <!-- checkout order -->
                                 <div class="checkout-order">
-                                    <h1>Оформление заказа <a href="#">Я уже покупал</a></h1>
+                                    <h1>Оформление заказа</h1>
+
+                                    <div class="checkout-steps">
+                                        <a href="#" class="checkout-step checkout-step-1">
+                                            <div class="checkout-step-number">1</div>
+                                            <div class="checkout-step-title">Корзина</div>
+                                        </a>
+                                        <div class="checkout-steps-sep"></div>
+                                        <a href="#" class="checkout-step checkout-step-2">
+                                            <div class="checkout-step-number">2</div>
+                                            <div class="checkout-step-title">Заказ</div>
+                                        </a>
+                                    </div>
 
                                     <!-- checkout form -->
                                     <div class="checkout-form">
@@ -225,7 +293,7 @@
 
                                             <div class="form-row">
                                                 <div class="form-field">
-                                                    <div class="form-submit"><input type="submit" value="Оформить заказ" class="btn-submit" /></div>
+                                                    <div class="form-submit"><input type="submit" value="Подтвердить заказ" class="btn-submit" /></div>
                                                 </div>
                                             </div>
                                         </form>
