--- a/01_main.html
+++ b/01_main.html
@@ -24,6 +24,9 @@
         <script src="js/jscrollpane/jquery.jscrollpane.min.js"></script>
         <script src="js/tools.js"></script>
 
+        <link rel="icon" href="favicon.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+
         <meta name="viewport" content="width=device-width" />
     </head>
 
@@ -39,8 +42,8 @@
                         <div class="logo"><img src="images/logo.png" alt="" width="252" height="60" /></div>
 
                         <div class="header-text">
-                            <div class="header-phone"><a href="tel:+74952283244">+7 (495) 228-32-44</a></div>
-                            <div class="header-schedule">Время работы: пн–пт, 10:00–18:00</div>
+                            <div class="header-phone"><a href="tel:+74995193029">+7 (499) 519-30-29</a></div>
+                            <div class="header-schedule">Время работы: пн–пт, 9:30 – 18:00</div>
                         </div>
 
                         <div class="header-cart">
@@ -97,6 +100,7 @@
                 <div class="nav">
                     <div class="container">
                         <div class="menu-add">
+                            <div class="menu-add-logo"><img src="images/logo-menu.png" alt="" width="252" height="60" /></div>
                             <a href="#" class="menu-add-link"></a>
                             <ul>
                                 <li><a href="#">Каталог</a></li>
@@ -629,8 +633,8 @@
 
                     <div class="map-detail">
                         <div class="map-detail-photo"><img src="files/map-photo.jpg" alt="" /></div>
-                        <p>Москва, Ступинский пр-д, 7с1<br />+7(499)519-30-29</p>
-                        <p>Время работы: пн–пт, 09:00–18:00</p>
+                        <p>Москва, Ступинский проезд, д. 7, стр. 1, офис 204<br />+7&nbsp;(499)&nbsp;519-30-29, +7&nbsp;(965)&nbsp;132-82-22, +7&nbsp;(926)&nbsp;684-33-45</p>
+                        <p>Время работы: пн–пт, 9:30 – 18:00</p>
                         <h4>Как пройти</h4>
                         <p>Согласно ставшей уже классической работе Филипа Котлера, производство развивает медиамикс. Жизненный цикл продукции синхронизирует жизненный цикл продукции.</p>
                     </div>
@@ -648,13 +652,13 @@
                     <div class="footer-logo"><img src="images/logo.png" alt="" width="252" height="60" /></div>
                     <dl>
                         <dt>Телефон</dt>
-                        <dd><strong>+7 (495) 228-32-44</strong></dd>
+                        <dd><strong>+7 (499) 519-30-29</strong></dd>
 
                         <dt>Адрес</dt>
-                        <dd>Москва, Ступинский пр-д, 7с1</dd>
+                        <dd>Москва, Ступинский проезд, д. 7, стр. 1, офис 204</dd>
 
                         <dt>Время работы</dt>
-                        <dd>пн–пт, 10:00–18:00</dd>
+                        <dd>пн–пт, 9:30 – 18:00</dd>
                     </dl>
                 </div>
 
