brands, utp, map contacts

--- a/01_main.html
+++ b/01_main.html
@@ -517,9 +517,9 @@
                     <div class="container">
                         <h3>Наши преимущества</h3>
                         <div class="prefs-list">
-                            <div class="prefs-item prefs-item-1"><div class="prefs-item-inner"><strong>Оперативность</strong><br /> Как отмечает Майкл Мескон, торговая марка продуцирует</div></div>
-                            <div class="prefs-item prefs-item-2"><div class="prefs-item-inner"><strong>Качество</strong><br /> Анализ рыночных цен без оглядки на авторитеты</div></div>
-                            <div class="prefs-item prefs-item-3"><div class="prefs-item-inner"><strong>Выгодная Цена</strong><br /> Таргетирование притягивает коллективный пресс-клиппинг.</div></div>
+                            <div class="prefs-item prefs-item-1"><a href="#" class="prefs-item-inner"><strong>Все в одном месте</strong><br /> Поставим любое оборудование для магазина и склада, вплоть до компьютерной мышки</a></div>
+                            <div class="prefs-item prefs-item-2"><a href="#" class="prefs-item-inner"><strong>Полный цикл обслуживания</strong><br /> Поможем выбрать, установить и&nbsp;настроить. Для вас никаких лишних телодвижений</a></div>
+                            <div class="prefs-item prefs-item-3"><a href="#" class="prefs-item-inner"><strong>Мы всегда идем навстречу</strong><br /> Нужна доставка поздно вечером или в выходной день?<br /> Мы сделаем все возможное</a></div>
                         </div>
                     </div>
                 </div>
@@ -633,10 +633,10 @@
 
                     <div class="map-detail">
                         <div class="map-detail-photo"><img src="files/map-photo.jpg" alt="" /></div>
-                        <p>Москва, Ступинский проезд, д. 7, стр. 1, офис 204<br />+7&nbsp;(499)&nbsp;519-30-29, +7&nbsp;(965)&nbsp;132-82-22, +7&nbsp;(926)&nbsp;684-33-45</p>
-                        <p>Время работы: пн–пт, 9:30 – 18:00</p>
-                        <h4>Как пройти</h4>
-                        <p>Согласно ставшей уже классической работе Филипа Котлера, производство развивает медиамикс. Жизненный цикл продукции синхронизирует жизненный цикл продукции.</p>
+                        <p>Москва, Ступинский проезд, д. 7, стр. 1, офис 204</p>
+                        <p>8 (499) 519-30-29, 8 (965) 132-82-22,<br /> 8 (926) 684-33-45</p>
+                        <p>Время работы: пн–пт, 09:30 – 18:00</p>
+                        <p><a href="mailto:">rbs@rbsgr.ru</a></p>
                     </div>
                 </div>
                 <!-- main map END -->
