tablet, 404, fix, updates

--- a/03_productInfo.html
+++ b/03_productInfo.html
@@ -148,7 +148,9 @@
 
                                     <div class="product-photo-big">
                                         <div class="product-photo-big-inner">
-                                            <a href="#"><img src="files/product-big-1.jpg" alt="" /></a>
+                                            <a href="#" class="active"><img src="files/product-big-1.jpg" alt="" /></a>
+                                            <a href="#"><img src="files/product-big-2.jpg" alt="" /></a>
+                                            <a href="#"><img src="files/product-big-3.jpg" alt="" /></a>
                                         </div>
                                     </div>
                                     <div class="product-photo-preview">
@@ -181,8 +183,8 @@
 
                                     <div class="product-price">
                                         <div class="product-price-value">15 500 &#8381;</div>
-                                        <div class="product-price-old">17 200 &#8381;</div>
                                         <div class="product-price-available">Товар в наличии</div>
+                                        <div class="product-price-old">17 200 &#8381;</div>
                                     </div>
 
                                     <div class="product-order">
@@ -229,7 +231,7 @@
                                     <p>В беспроводном сканере штрих-кода Datalogic PSC QS 2130 используется беспроводная технология STAR-System narrow-band от компании Datalogic, являющаяся наиболее безопасной и надежной технологией на рынке беспроводных устройств в диапазоне</p>
                                     <div class="content-video"><iframe src="https://www.youtube.com/embed/k6rJIxDxidU" frameborder="0" allowfullscreen></iframe></div>
                                     <div class="content-social">
-                                        <script type="text/javascript">(function() {
+                                    <!--    <script type="text/javascript">(function() {
                                           if (window.pluso)if (typeof window.pluso.start == "function") return;
                                           if (window.ifpluso==undefined) { window.ifpluso = 1;
                                             var d = document, s = d.createElement('script'), g = 'getElementsByTagName';
@@ -239,7 +241,7 @@
                                             h.appendChild(s);
                                           }})();</script>
                                         <div class="pluso" data-services="vkontakte,odnoklassniki,facebook,twitter,google" data-options="medium,square,line,horizontal,nocounter,sepcounter=1,theme=14" data-background="none;"></div>
-                                    </div>
+                                    --></div>
                                 </div>
 
                                 <div class="product-tab-content">
