--- a/06_compare.html
+++ b/06_compare.html
@@ -253,6 +253,8 @@
                             </div>
                             <!-- compare list wrap END -->
 
+                            <div class="compare-tablet-clear"><a href="#" class="btn-apply">Очистить список</a></div>
+
                         </div>
                     </div>
                     <!-- content END -->
