--- a/02_catalogue.html
+++ b/02_catalogue.html
@@ -167,6 +167,7 @@
                                         <li><a href="#">Проводные</a></li>
                                         <li><a href="#">Беспроводные</a></li>
                                         <li><a href="#">Стационарные</a></li>
+                                        <li><a href="#">Расходные материалы для карточных принтеров</a></li>
                                     </ul>
                                 </li>
                                 <li>
@@ -528,9 +529,9 @@
                                         <div class="catalogue-item-name"><a href="#">Ручной одномерный сканер штрих-кода Datalogic QUICKSCAN</a></div>
                                         <div class="catalogue-item-ctrl">
                                             <div class="catalogue-item-price">15 500 &#8381;</div>
-                                            <div class="catalogue-item-price-old">17 500 &#8381;</div>
                                             <div class="catalogue-item-cart"><a href="windows/basket.html"></a><div>Товар добавлен <a href="#">в корзину</a></div><div>Добавить в корзину</div></div>
                                             <div class="catalogue-item-compare"><a href="#"></a><div>Товар добавлен <a href="#">в список сравнения</a></div><div>Добавить в список сравнения</div></div>
+                                            <div class="catalogue-item-price-old">17 500 &#8381;</div>
                                         </div>
                                         <div class="catalogue-item-event catalogue-item-event-hit">Хит</div>
                                     </div>
