--- a/03_productInfo.html
+++ b/03_productInfo.html
@@ -200,6 +200,7 @@
                                     <div class="product-links">
                                         <div class="product-link-compare">
                                             <a href="#"><span>в список сравнения</span><span>Товар в списке сравнения</span></a>
+                                            <div>Перейти <a href="#">к списку сравнения</a></div>
                                         </div>
                                         <a href="windows/delivery.html" class="product-link-delivery">Оплата/доставка</a>
                                     </div>
