--- a/05_searchResults.html
+++ b/05_searchResults.html
@@ -111,6 +111,7 @@
                                 <li><a href="#">Контакты</a></li>
                             </ul>
                             <div class="menu-add-sections">
+                                <a href="#" class="menu-add-section-close-mobile"></a>
                                 <ul>
                                     <li>
                                         <a href="#">Сканеры</a>
